--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Will You Be My Valentine?</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="code/style.css">
+    <script src="code/script.js" defer></script>
 </head>
 <body>
 
@@ -17,8 +17,8 @@
 
         <!-- Polaroid pictures -->
         <div class="photo-wrapper">
-            <img src="kent1.jfif" class="polaroid left" alt="Her Photo 1">
-            <img src="kent2.jfif" class="polaroid right" alt="Her Photo 2">
+            <img src="code/kent1.jfif" class="polaroid left" alt="Her Photo 1">
+            <img src="code/kent2.jfif" class="polaroid right" alt="Her Photo 2">
         </div>
 
         <!-- Buttons -->
@@ -31,7 +31,7 @@
     <!-- PAGE 2 -->
     <div class="page" id="page2">
         <!-- GIF -->
-        <img src="kiss.gif" class="second-gif" alt="Cute Valentine GIF">
+        <img src="code/kiss.gif" class="second-gif" alt="Cute Valentine GIF">
 
         <h1>Date Plan 💕</h1>
         <h2>YAYYY 💖</h2>
@@ -46,7 +46,8 @@
 </div>
 
 <!-- Background Music -->
-<audio id="bgMusic" src="old.mp3" type="audio/mpeg"></audio>
+<audio id="bgMusic" src="code/old.mp3" type="audio/mpeg"></audio>
 
 </body>
 </html>
+
